# nft-marketplace

./: .gitignore  .prettierrc  Cargo.toml  README.md  package.json
batchmint/: package.json  startmint.js  utils.js
contract/: .binpath
contract/state/: .binpath
contracts/dynamic-nft/: Cargo.toml
contracts/dynamic-nft/io/src/: lib.rs
contracts/dynamic-nft/src/: lib.rs  player.rs
contracts/dynamic-nft/state/src/: lib.rs
contracts/dynamic-nft/tests/: nft_tests.rs  node_tests.rs  utils.rs
contracts/fungible-token/io/src/: lib.rs
contracts/fungible-token/src/: lib.rs  tests.rs
contracts/fungible-token/state/src/: lib.rs
contracts/gear-lib-old/src/non_fungible_token/: token.rs
contracts/nft-marketplace/: .binpath
contracts/nft-marketplace/state/: .binpath
contracts/non-fungible-token/: .binpath
contracts/non-fungible-token/src/: lib.rs
contracts/non-fungible-token/state/: .binpath
frontend/: .env  .env.example  package.json
frontend/dynamic-nft/: .env.example  Dockerfile  README.md  batchmint.js  config-overrides.js  package.json
frontend/dynamic-nft/public/: index.html
frontend/dynamic-nft/public/static/: images.json
frontend/dynamic-nft/src/: consts.ts
frontend/dynamic-nft/src/assets/meta/: meta.txt
frontend/dynamic-nft/src/assets/styles/: index.scss
frontend/dynamic-nft/src/assets/wasm/: state.meta.wasm
frontend/dynamic-nft/src/components/: index.ts
frontend/dynamic-nft/src/components/Modal/: Modal.module.scss  Modal.tsx
frontend/dynamic-nft/src/components/attributes/: Attributes.module.scss  Attributes.tsx
frontend/dynamic-nft/src/components/footer/: footer.tsx
frontend/dynamic-nft/src/components/image/: index.tsx
frontend/dynamic-nft/src/contracts/: dynamic_nft.meta.txt  dynamic_nft_state.meta.wasm  fungible_token.meta.txt  fungible_token_state.meta.wasm
frontend/dynamic-nft/src/hocs/: index.tsx
frontend/dynamic-nft/src/hooks/: index.ts  nft.ts  ticket.ts  useMetadata.ts
frontend/dynamic-nft/src/pages/: index.tsx
frontend/dynamic-nft/src/pages/addminter/: AddMinter.tsx  index.ts
frontend/dynamic-nft/src/pages/cardlist/: ImageList.module.scss  ImageList.tsx  index.ts
frontend/dynamic-nft/src/types/: index.ts
frontend/dynamic-nft/src/utils/: encode.ts  form.ts  index.ts  ipfs.ts  ticket.ts
frontend/nft-marketplace/: .env.example  .eslintrc.js  Dockerfile  config-overrides.js  package.json
frontend/nft-marketplace/src/: App.tsx  consts.ts
frontend/nft-marketplace/src/components/: index.ts
frontend/nft-marketplace/src/hooks/: index.ts  marketplace.ts  merge-nft.ts  metadata.ts  nft.ts
frontend/nft-marketplace/src/utils/: index.ts  ipfs.ts
frontend/non-fungible-token/: .env.example  .eslintrc.js  Dockerfile  package.json
frontend/non-fungible-token/src/: App.tsx  consts.ts
frontend/non-fungible-token/src/components/: index.ts
frontend/non-fungible-token/src/context/: helia.tsx  index.ts
frontend/non-fungible-token/src/hocs/: index.tsx
frontend/non-fungible-token/src/hooks/: api.ts  helia.ts  index.ts
frontend/non-fungible-token/src/utils/: file.ts  form.ts  index.ts
(+48 files in other folders)
