[workspace]
resolver = "2"
# Keep in the lexicographic order!
# Remove a member if it's used as a dependency in the workspace.
members = [
    "contracts/fungible-token",
    "contracts/fungible-token/state",
    "contracts/dynamic-nft",
    "contracts/dynamic-nft/state",
    "contracts/nft-marketplace",
    "contracts/nft-marketplace/state",
    "contracts/non-fungible-token",
    "contracts/non-fungible-token/state",
    "contracts/sharded-fungible-token",
    "contracts/sharded-fungible-token/logic",
    "contracts/sharded-fungible-token/storage",
]

[workspace.package]
homepage = "https://wiki.gear-tech.io/docs/examples/prerequisites"
documentation = "https://dapps.gear.rs"
authors = ["Gear Foundation <hello@gear.foundation>"]
version = "1.1.0"
license = "MIT"
edition = "2021"
publish = false

[workspace.dependencies]

fungible-token-io.path = "contracts/fungible-token/io"

sharded-fungible-token.path = "contracts/sharded-fungible-token"
sharded-fungible-token-logic.path = "contracts/sharded-fungible-token/logic"
sharded-fungible-token-storage.path = "contracts/sharded-fungible-token/storage"

nft-marketplace-io.path = "contracts/nft-marketplace/io"

non-fungible-token-io.path = "contracts/non-fungible-token/io"
non-fungible-token-state.path = "contracts/non-fungible-token/state"
non-fungible-token.path = "contracts/non-fungible-token"

dynamic-nft-io.path = "contracts/dynamic-nft/io"

sharded-fungible-token-io.path = "contracts/sharded-fungible-token/io"
sharded-fungible-token-logic-io.path = "contracts/sharded-fungible-token/logic/io"
sharded-fungible-token-storage-io.path = "contracts/sharded-fungible-token/storage/io"

gear-lib.path = "contracts/gear-lib"
gear-lib-old.path = "contracts/gear-lib-old"
gear-lib-derive.path = "contracts/gear-lib-old/derive"

# Gear

gstd = "1.1.0"
gear-wasm-builder = "1.1.0"
gmeta = "1.1.0"
gclient = "1.1.0"
gtest = { git = "https://github.com/gear-tech/gear", tag = "v1.1.0" }
gear-core = "1.1.0"

# External

primitive-types = { version = "0.12", default-features = false }
sp-core = { version = "22", default-features = false, features = ["full_crypto", "sp-externalities"] }
sp-core-hashing = { version = "10", default-features = false }
tokio = "1"
blake2-rfc = "0.2"
hex-literal = "0.4"
hex = { version = "0.4", default-features = false }
async-trait = "0.1"
rand = { version = "0.8", default-features = false }
rand_xoshiro = "0.6"
indexmap = { version = "2", default-features = false }
ahash = { version = "0.8", default-features = false, features = ["no-rng"] }
schnorrkel = { version = "0.10", default-features = false, features = ["u64_backend"] }
syn = { version = "2", default-features = false }
quote = "1"
clap = { version = "4", default-features = false, features = ["std"] }
enum-iterator = "1"
xshell = "0.2"
anyhow = "1"
sha2 = "0.10"
num-traits = { version = "0.2", default-features = false }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
